--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: test-powershell-action
 description: 'test description'
+branding:
+  icon: check-circle
+  color: blue
 inputs:
   number1:
     description: 'the first number'
