--- a/action.yml
+++ b/action.yml
@@ -4,14 +4,21 @@ branding:
   icon: check-circle
   color: blue
 inputs:
-  number1:
-    description: 'the first number'
+  asoc_key:
+    description: 'API key for connecting to ASoC.'
     required: true
-  number2:
-    description: 'the second number'
+  asoc_secret:
+    description: 'Secret for connecting to ASoC.'
     required: true
+  application_id:
+    description: 'The ASoC application id where your scan will appear.'
+    required: true
+  scan_name:
+    description: 'The name of the scan created in ASoC.'
+    required: false
+
 runs:
   using: "composite"
   steps:
-    - run: ${{ github.action_path }}/SampleScript.ps1
+    - run: ${{ github.action_path }}/asoc.ps1
       shell: pwsh
