--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,10 @@ branding:
   icon: check-circle
   color: blue
 inputs:
+  baseurl:
+    description "baseURL of ASOC API"
+    required: true
+
   asoc_key:
     description: 'API key for connecting to ASoC.'
     required: true
