--- a/action.yml
+++ b/action.yml
@@ -23,5 +23,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: ${{ github.action_path }}/asoc.ps1
+    - run: 
+        ${{ github.action_path }}/asoc.ps1
+        
       shell: pwsh
