--- a/action.yml
+++ b/action.yml
@@ -25,10 +25,10 @@ runs:
   steps:
     - run: |
         # $env:INPUT_TEST = "${{ inputs.TEST }}"
-        $env:INPUT_baseurl = "${{ inputs.baseurl }}"
-        $env:INPUT_asoc_key = "${{inputs.asoc_key}}"
-        $env:INPUT_asoc_secret = "${{inputs.asoc_secret}}"
-        $env:INPUT_application_id = "${{inputs.application_id}}"
+        $env:INPUT_BASEURL = "${{ inputs.baseurl }}"
+        $env:INPUT_ASOC_KEY = "${{inputs.asoc_key}}"
+        $env:INPUT_ASOC_SECRET = "${{inputs.asoc_secret}}"
+        $env:INPUT_APPLICATION_ID = "${{inputs.application_id}}"
 
         ${{ github.action_path }}/asoc.ps1
       shell: pwsh
