--- a/action.yml
+++ b/action.yml
@@ -155,7 +155,7 @@ runs:
         $env:INPUT_fail_by_severity = "${{ inputs.fail_by_severity }}"
         $env:INPUT_failure_threshold = "${{ inputs.failure_threshold }}"
 
-        ${{ github.action_path }}/asoc.ps1
+        ${{ github.action_path }}/main.ps1
       shell: pwsh
     - uses: actions/upload-artifact@v3
       name: Upload HCL AppScan Static Analysis HTML Report to Github Artifacts
