--- a/action.yml
+++ b/action.yml
@@ -164,4 +164,4 @@ runs:
       name: Upload HCL AppScan HTML Report to Github Artifacts
       with:
         name: AppScan Security Scan HTML Report 
-        path: '**/*.html'
+        path: '**/AppScan*.html'
