--- a/action.yml
+++ b/action.yml
@@ -160,8 +160,13 @@ runs:
         ${{ github.action_path }}/asoc.ps1
         ${{ github.action_path }}/main.ps1
       shell: pwsh
+      name: ASoC DAST Step
     - uses: actions/upload-artifact@v3
       name: Upload HCL AppScan HTML Report to Github Artifacts
       with:
         name: AppScan Security Scan HTML Report 
         path: '**/AppScan*.html'
+    - name: Job Canceled Step
+      if: ${{ always() }}
+      run: Write-Host "Always Run Step"
+      shell: pwsh
