--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ testMain.ps1
 testResultProcessor.ps1
 testIssueComment.ps1
 testScanCancelation.ps1
+testPresence.ps1
 *.pdf
 tags_to_remove.txt
 *.scan
@@ -11,3 +12,4 @@ tags_to_remove.txt
 *.txt
 /presence
 presence.zip
+*.zip
